# docscope

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
api/: .dockerignore  Dockerfile  pyproject.toml
api/src/docscope/: __init__.py  main.py
api/src/docscope/core/: __init__.py  config.py  database.py  logging.py
api/src/docscope/migrations/: 0001_singularize_schema.py  0002_add_apside_template.py  0003_add_validated_column.py
api/src/docscope/routers/: __init__.py  documents.py  extract.py
api/src/docscope/scripts/: __init__.py  reset_db.py
api/src/docscope/services/: __init__.py  documents.py  extraction.py  payslip_apside.py
api/src/docscope/services/models/: __init__.py  apside.py  delvaux.py  mosica.py  ucm.py
client/: .dockerignore  Dockerfile
client/src/: index.html  payslip.html
client/src/debug/: apside.html  delvaux.html  mosica.html  ucm.html
client/src/documents/: detail.html  graphique-apside.html  list.html
docs/: architecture.md
tests/: test_documents_service.py  test_health.py  test_schema_naming.py  test_ucm_earnings_table.py  test_ucm_fields.py
